fix:冗長なコードの修正
check:生徒登録、生徒一覧の取得、生徒をIDから取得、教師の一覧の取得、ICカードの登録までのHTTP通信のテスト

notYet:IDから取得する部分をもう少し使いやすく変更する
