# src/main/java/xyz/miyayu/attendanceapiserver/Controller/StudentController.java
@@ -1,9 +1,12 @@
 package xyz.miyayu.attendanceapiserver.Controller;
 
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
+import org.springframework.web.server.ResponseStatusException;
 import xyz.miyayu.attendanceapiserver.Entity.StudentEntity;
-import xyz.miyayu.attendanceapiserver.Entity.response.StudentResponse;
+import xyz.miyayu.attendanceapiserver.Controller.Response.StudentResponse;
 import xyz.miyayu.attendanceapiserver.Repository.StudentRepository;
 
 @RestController
@@ -23,9 +26,11 @@ public class StudentController {
         return response;
     }
 
-    @GetMapping("/[selectId]")
-    public StudentEntity getStudentById(@RequestParam int autoId) {
-        return studentRepository.findById(autoId).orElse(null);
+    @GetMapping("/{studentAutoId}")
+    public ResponseEntity<StudentEntity> getStudentById(@PathVariable int studentAutoId) {
+        return studentRepository.findById(studentAutoId)
+                .map(ResponseEntity::ok)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.BAD_REQUEST, "Student not found"));
     }
 
     @PostMapping("")
