# swagger.yml
@@ -60,7 +60,7 @@ paths:
                     items:
                       $ref: '#/components/schemas/Student'
 
-  /stundent/{studentId}:
+  /stundent/{studentAutoId}:
     get:
       tags:
         - Student
@@ -68,7 +68,7 @@ paths:
       description: 一致する生徒を1名のみ返します。
       operationId: getStudentById
       parameters:
-        - name: studentId
+        - name: studentAutoId
           in: path
           description: 学籍番号
           required: true
@@ -119,7 +119,7 @@ paths:
       description: ICカードを新しく登録します
       operationId: addIC
       parameters:
-        - name: studentId
+        - name: studentAutoId
           in: query
           description: 学生の番号（自動生成）
           required: true
